<?xml version="1.0" encoding="utf-8"?>
<!-- 
  Amarino - A prototyping software toolkit for Android and Arduino
  Copyright (c) 2010 Bonifaz Kaufmann.  All right reserved.
  
  This application and its library is free software; you can redistribute
  it and/or modify it under the terms of the GNU Lesser General Public
  License as published by the Free Software Foundation; either
  version 3 of the License, or (at your option) any later version.

  This library is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
  Lesser General Public License for more details.

  You should have received a copy of the GNU Lesser General Public
  License along with this library; if not, write to the Free Software
  Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
-->
<resources>
    <string name="monitoring">Monitoring</string>
    <string name="add_bt_device">Add BT Device</string><string name="add_lan_device">Add LAN Device</string>
    <string name="add_event">Add Event</string>
    <string name="lanDevice">Please enter above the IP-Adress of your device and choose the architecture of your ardunio board. Check if an Integer is 16 or 32 bits long.</string>
    <string name="app_name">Amarino 2.0</string>
	<string name="settings">Settings</string>
	<string name="no_devices">First you have to add a new Bluetooth device.</string>
	<string name="no_events">No events selected!</string>
	<string name="connect">Connect</string>
	<string name="connected">Connected</string>
	<string name="disconnect">Disconnect</string>
	<string name="disconnected">Disconnected</string>
	<string name="connecting">Connecting</string>
	<string name="remove">Remove</string>
	<string name="remove_all">Remove All</string>
	<string name="force_disable_all">Force Disable All</string>
	<string name="enable">Enable</string>
	<string name="disable">Disable</string>
	<string name="disabled">disabled</string>
	<string name="force_enable">Force Enable</string>
	<string name="force_disable">Force Disable</string>
	<string name="no_plugins_installed">There are no Amarino plug-ins installed on your phone.
	\n\nInstall the AmarinoPlugInBundle to get some events to start with.</string>
	<string name="plugin_info_msg">This is a plug-in for Amarino 2.0 and not a standalone application.
	\n\nYou can add this plug-in to Amarino, by selecting \'Add Event\' within Amarino</string>
	

	<string name="flag_btn">Flag: %s</string>
	
	<!-- Context menu MainScreen -->
	<string name="show_events">Show Events</string>
	<string name="remove_device">Remove Device</string>
	<string name="menu_about">About</string>

	<!-- Service messages -->
	<string name="service_started_title">background service started</string>
	<string name="service_notify_text">Amarino is running</string>
	<string name="service_active_connections">Active connections: %s</string>
	<string name="service_no_active_connections">No active connections</string>
	<string name="service_connecting_to">Connecting to %s</string>
	<string name="service_connection_to_failed">Connection failed.</string>
	<string name="service_connected_to">Connected to %s</string>
	<string name="service_disconnected_from">Disconnected from %s</string>
	<string name="service_pairing_request">Pairing request for %s\n\nPull down your status bar to enter the pin.</string>
	<string name="service_address_invalid">Given address [%s] is invalid. Must be of form xx:xx:xx:xx:xx:xx</string>
	<string name="service_message_to_send">message to send: %s</string>
	<string name="service_ready_to_shutdown">service ready to shutdown</string>
	
	<!-- Titles -->
	<string name="monitoring_title">"Monitoring"</string>
	<string name="settings_title">"Settings"</string>
	
	<string name="about_msg">Amarino 2.0 - A prototyping platform for Android and Arduino
	\n\n\u00A9 2010 by Bonifaz Kaufmann
	\n\nhttp://www.amarino-toolkit.net
	
	\n\nThanks to Stefano Sanna and Emanuele Di Saverio, since Amarino uses
	their Android Bluetooth API which can be found at
	\nhttp://code.google.com/p/android-bluetooth/</string>
	
	<string name="about_changelog"><b>Release Notes</b>
	\n0.55
	\n - fixed bug in MessageBuilder. Flags were converted to numbers in some cases.
	\n0.53
	\n - fixed bug in Amarino API (in Amarino.java), device address was not sent when using sendDataToArduino() function
	\n\n0.52
	\n - added fall back when UUID does not work, it will try to use the good old port 1
	\n\n0.5
	\n - uses UUID (instead of always port 1) to determine which port to use when connecting to a Bluetooth module
	\n - added release notes dialog to show up when a new Amarino version has been installed
	\n - shows a message when no plug-ins are installed and user tries to add an event
	</string>
	<string name="ip_adress">enter IP adress</string>
	<string name="radio_16">till Arduino Due (int = 16bit)</string>
	<string name="radio_32">from Arduino Due (int = 32bit)</string>
</resources>
